Fixed methods that used deprecated functions