@@ -10,7 +10,6 @@ import org.neo4j.driver.v1.Transaction;
 
 import java.io.IOException;
 import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
 
 public class ComputeBaconNumber implements HttpHandler {
     private static final String KEVIN_BACON_ID = "nm0000102";
@@ -40,7 +39,7 @@ public class ComputeBaconNumber implements HttpHandler {
         // check if the request body is empty
         if(body.isEmpty()) {
             String uri = r.getRequestURI().toString().split("\\?jsonString=")[1];
-            body = URLDecoder.decode(uri, StandardCharsets.UTF_8);
+            body = URLDecoder.decode(uri, "UTF-8");
             System.out.println("Request URI: " + body);
         }
 
